fixing close button being offscreen

--- a/src/styles/componentStyles/componentStyles.scss
+++ b/src/styles/componentStyles/componentStyles.scss
@@ -40,7 +40,6 @@
 }
 
 .sidebar {
-    min-height: 100vh;
     margin-top: 73.69px;
     padding-left: 20px;
     background-color: #E5324A;
@@ -85,7 +84,7 @@
 }
 
 .sidebar button{
-    margin-top: 20px;
+    margin-top: 10px;
     font-family: "Montserrat", sans-serif;
     font-size: 25px;
     background: transparent;
